--- a/UserSettings/Search.settings
+++ b/UserSettings/Search.settings
@@ -16,6 +16,9 @@ scopes = {
 	"last_search.8DF93126" = "fondo"
 	"OpenInspectorPreview.8DF93126" = "0"
 	"currentGroup.8DF93126" = null
+	"last_search.5A656512" = "ref=\"/Naninovel<Runtime>/UI/ChoiceHandler\""
+	"OpenInspectorPreview.5A656512" = "0"
+	"currentGroup.5A656512" = null
 }
 providers = {
 	asset = {
